# three-and-a-half-ways-of-testing-your-repositories

./: README.md  package.json  slides.md
.github/workflows/: slidev.yaml
code/python/: pyproject.toml
code/python/src/repositories/: dynamodb_repository.py  pastry.py  psql_repository.py  s3_repository.py
code/python/tests/: test_dynamodb_repository.py  test_psql_repository.py  test_psql_repository_fail.py  test_s3_repository.py
public/images/: ddd-layers.drawio  testing-interceptions.drawio
styles/: attribution.css  index.ts  speech-bubble.css
theme/: layoutHelper.ts
theme/layouts/: image.vue
