[tool.poetry]
name = "repositories"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.33.11"
httpretty = "^1.1.4"
testcontainers = "^3.7.1"
pytest-mock = "^3.12.0"
pytest = "^7.4.3"
psycopg = "^3.1.14"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
ruff = "^0.0.289"
sqlalchemy = "^2.0.23"

[tool.ruff]
select = ["ALL"]
ignore = ["D211", "D213", "T201"]

[tool.ruff.per-file-ignores]
"tests/**" = ["D", "S101", "S105", "INP001", "ANN201"]

[tool.poetry.scripts]
calculate = "repositories.calculator:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
